@@ -10,6 +10,7 @@
 
 
 Version 4.2.3
+ - Fixed: [ 2890066 ] PGV won't use browser's preferred language (canajun2eh)
  - Fixed: [ 2881979 ] Tab problem individual page (fisharebest/julianito)
  - Fixed: [ 2882104 ] Minor CSS detail (fisharebest)
  - Fixed: [ 2890031 ] SVN, User migration, wrong DB function (fisharebest)
